assets/Tw75rex9Hq52uNTcb-Emiel 1 - Wed May 15 2019 17-38-22 GMT+0200 (Central European Summer Time).txt
```

> pkcs11js@1.0.17 install /Users/emielvdbrink/go/fabric-samples/commercial-paper/organization/magnetocorp/application/node_modules/pkcs11js
> node-gyp rebuild

  CXX(target) Release/obj.target/pkcs11/src/main.o
Apple LLVM version 10.0.1 (clang-1001.0.46.4)
Target: x86_64-apple-darwin18.5.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
 "/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang" -cc1 -triple x86_64-apple-macosx10.7.0 -Wdeprecated-objc-isa-usage -Werror=deprecated-objc-isa-usage -emit-obj -disable-free -disable-llvm-verifier -discard-value-names -main-file-name main.cpp -mrelocation-model pic -pic-level 2 -mthread-model posix -mdisable-fp-elim -fno-strict-return -masm-verbose -munwind-tables -faligned-alloc-unavailable -target-sdk-version=10.14 -target-cpu core2 -dwarf-column-info -debug-info-kind=standalone -dwarf-version=2 -debugger-tuning=lldb -target-linker-version 450.3 -v -coverage-notes-file /Users/emielvdbrink/go/fabric-samples/commercial-paper/organization/magnetocorp/application/node_modules/pkcs11js/build/Release/obj.target/pkcs11/src/main.gcno -resource-dir /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/clang/10.0.1 -dependency-file ./Release/.deps/Release/obj.target/pkcs11/src/main.o.d.raw -skip-unused-modulemap-deps -MT Release/obj.target/pkcs11/src/main.o -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk -D NODE_GYP_MODULE_NAME=pkcs11 -D USING_UV_SHARED=1 -D USING_V8_SHARED=1 -D V8_DEPRECATION_WARNINGS=1 -D V8_DEPRECATION_WARNINGS -D V8_IMMINENT_DEPRECATION_WARNINGS -D _DARWIN_USE_64_BIT_INODE=1 -D _LARGEFILE_SOURCE -D _FILE_OFFSET_BITS=64 -D OPENSSL_THREADS -D BUILDING_NODE_EXTENSION -I /Users/emielvdbrink/.node-gyp/12.1.0/include/node -I /Users/emielvdbrink/.node-gyp/12.1.0/src -I /Users/emielvdbrink/.node-gyp/12.1.0/deps/openssl/config -I /Users/emielvdbrink/.node-gyp/12.1.0/deps/openssl/openssl/include -I /Users/emielvdbrink/.node-gyp/12.1.0/deps/uv/include -I /Users/emielvdbrink/.node-gyp/12.1.0/deps/zlib -I /Users/emielvdbrink/.node-gyp/12.1.0/deps/v8/include -I ../../nan -I ../includes -I/usr/local/include -stdlib=libc++ -stdlib=libc++ -Os -Wall -Wendif-labels -W -Wno-unused-parameter -Wno-atomic-implicit-seq-cst -Wno-framework-include-private-from-public -Wno-atimport-in-framework-header -Wno-quoted-include-in-framework-header -std=c++11 -fdeprecated-macro -fdebug-compilation-dir /Users/emielvdbrink/go/fabric-samples/commercial-paper/organization/magnetocorp/application/node_modules/pkcs11js/build -ferror-limit 19 -fmessage-length 299 -stack-protector 1 -fblocks -fencode-extended-block-signature -fno-rtti -fregister-global-dtors-with-atexit -fobjc-runtime=macosx-10.7.0 -fcxx-exceptions -fexceptions -fmax-type-align=16 -fdiagnostics-show-option -fcolor-diagnostics -vectorize-loops -vectorize-slp -o Release/obj.target/pkcs11/src/main.o -x c++ ../src/main.cpp
clang -cc1 version 10.0.1 (clang-1001.0.46.4) default target x86_64-apple-darwin18.5.0
ignoring nonexistent directory "/Users/emielvdbrink/.node-gyp/12.1.0/src"
ignoring nonexistent directory "/Users/emielvdbrink/.node-gyp/12.1.0/deps/openssl/config"
ignoring nonexistent directory "/Users/emielvdbrink/.node-gyp/12.1.0/deps/openssl/openssl/include"
ignoring nonexistent directory "/Users/emielvdbrink/.node-gyp/12.1.0/deps/uv/include"
ignoring nonexistent directory "/Users/emielvdbrink/.node-gyp/12.1.0/deps/zlib"
ignoring nonexistent directory "/Users/emielvdbrink/.node-gyp/12.1.0/deps/v8/include"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/usr/include/c++/v1"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/usr/local/include"
ignoring nonexistent directory "/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/Library/Frameworks"
#include "..." search starts here:
#include <...> search starts here:
 /Users/emielvdbrink/.node-gyp/12.1.0/include/node
 ../../nan
 ../includes
 /usr/local/include
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/clang/10.0.1/include
 /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include
 /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/usr/include
 /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.14.sdk/System/Library/Frameworks (framework directory)
End of search list.
In file included from ../src/main.cpp:5:
../src/node.h:22:23: error: no template named 'Handle' in namespace 'v8'
        static void Init(v8::Handle<v8::Object> exports);
                         ~~~~^
1 error generated.
make: *** [Release/obj.target/pkcs11/src/main.o] Error 1
gyp ERR! build error 
gyp ERR! stack Error: `make` failed with exit code: 2
gyp ERR! stack     at ChildProcess.onExit (/usr/local/lib/node_modules/npm/node_modules/node-gyp/lib/build.js:262:23)
gyp ERR! stack     at ChildProcess.emit (events.js:196:13)
gyp ERR! stack     at Process.ChildProcess._handle.onexit (internal/child_process.js:256:12)
gyp ERR! System Darwin 18.5.0
gyp ERR! command "/usr/local/Cellar/node/12.1.0/bin/node" "/usr/local/lib/node_modules/npm/node_modules/node-gyp/bin/node-gyp.js" "rebuild"
gyp ERR! cwd /Users/emielvdbrink/go/fabric-samples/commercial-paper/organization/magnetocorp/application/node_modules/pkcs11js
gyp ERR! node -v v12.1.0
gyp ERR! node-gyp -v v3.8.0
gyp ERR! not ok 
npm WARN nodejs@1.0.0 No description
npm WARN nodejs@1.0.0 No repository field.

npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! pkcs11js@1.0.17 install: `node-gyp rebuild`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the pkcs11js@1.0.17 install script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /Users/emielvdbrink/.npm/_logs/2019-05-15T15_37_19_417Z-debug.log
```